# sentinel-mcp

./: .dockerignore  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  claude_mcp_config_example.json  pyproject.toml  requirements.txt  start.bat
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
api/: main.py
config/: mcp_servers.yaml  model_config.yaml  rules.yaml
dashboard/: app.js  index.html  style.css
data/: training_examples.csv
docs/: ARCHITECTURE.md  PROJECT_CONTINUATION.md
mcp_server/: server.py  sse_server.py
sentinel_core/: audit_log.py  classifier.py  llm_reviewer.py  mcp_registry.py  model_manager.py  orchestrator.py  rules_engine.py
tests/: test_rules_engine.py
train/: generate_training_data.py  train_classifier.py
