[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel-mcp"
version = "1.0.0"
description = "A three-stage guardrail agent for LLM-powered coding assistants."
readme = "README.md"
authors = [
    { name = "Sentinel Contributors", email = "maintainers@sentinel-mcp.com" }
]
license = { text = "MIT License" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
keywords = ["mcp", "llm", "guardrails", "security", "ai-agent", "claude", "ollama"]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "requests>=2.31.0",
    "scikit-learn>=1.3.0",
    "mcp>=0.1.0",
    "starlette>=0.27.0"
]

[project.urls]
Homepage = "https://github.com/fncreator22/sentinel-mcp"
Repository = "https://github.com/fncreator22/sentinel-mcp.git"
"Bug Tracker" = "https://github.com/fncreator22/sentinel-mcp/issues"
